# agents

.claude/: CLAUDE.md  settings.json
claude-code/: README.md
mini-codex/: README.md  main.py  pyproject.toml
mini-codex/mini_codex/: __init__.py  agent.py  agents.py  cli.py  mcp_client.py  session.py  tools.py
proto/: README.md  main.py  pyproject.toml
proto/proto/: __init__.py  agent.py  agents.py  cli.py  mcp_client.py  tools.py
